--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -60,8 +60,9 @@ jobs:
           args:
             # Unique keys of your project and organization. You can find them in SonarCloud > Information (bottom-left menu)
             # mandatory
-            -Dsonar.projectKey=alce65_week4.todo
-            -Dsonar.organization=alce65
+            -Dsonar.projectKey=Liluminalia_202210-w6ch5-saraflores
+            -Dsonar.organization=liluminalia
+
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
