--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "week4.todo",
+    "name": "202210-w6ch1-saraflores",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -10,13 +11,16 @@
         "@types/node": "^16.18.0",
         "@types/react": "^18.0.23",
         "@types/react-dom": "^18.0.7",
+        "@types/redux": "^3.6.0",
         "@typescript-eslint/eslint-plugin": "^5.41.0",
         "@typescript-eslint/parser": "^5.41.0",
         "eslint-config-prettier": "^8.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
+        "redux": "^4.2.0",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
@@ -46,6 +50,12 @@
     },
     "prettier": {
         "singleQuote": true
+    },
+    "jest": {
+        "coveragePathIgnorePatterns": [
+            "<rootDir>/src/reportWebVitals.ts",
+            "<rootDir>/src/index.ts"
+        ]
     },
     "browserslist": {
         "production": [
